testing/runner/tests/snapshots/like_prefix_optimization__leading-wildcard-no-index-seek.snap
---
source: like_prefix_optimization.sqltest
expression: SELECT * FROM t WHERE name LIKE '%abc';
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - like_prefix_schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN t
