testing/runner/tests/snapshots/like_prefix_optimization__like-prefix-digits-consumed.snap
---
source: like_prefix_optimization.sqltest
expression: SELECT * FROM t_digits WHERE code LIKE '12%';
info:
  statement_type: SELECT
  tables:
  - t_digits
  setup_blocks:
  - like_prefix_digits_schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH t_digits USING INDEX idx_digits (code>=? AND code<?)

BYTECODE
addr  opcode       p1  p2  p3  p4      p5  comment
   0  Init          0  11   0           0  Start at 11
   1  OpenRead      0   3   0  k(2,B)   0  index=idx_digits, root=3, iDb=0
   2  String8       0   3   0  12       0  r[3]='12'
   3  SeekGE        0  10   3           0  key=[3..3]
   4  String8       0   3   0  13       0  r[3]='13'
   5    IdxGE       0  10   3           0  key=[3..3]
   6    IdxRowId    0   1   0           0  r[1]=cursor 0 for index idx_digits.rowid
   7    Column      0   0   2           0  r[2]=idx_digits.code
   8    ResultRow   1   2   0           0  output=r[1..2]
   9  Next          0   5   0           0
  10  Halt          0   0   0           0
  11  Transaction   0   1   2           0  iDb=0 tx_mode=Read
  12  Goto          0   1   0           0
