testing/runner/tests/snapshots/like_prefix_optimization__like-prefix-nocase-consumed.snap
---
source: like_prefix_optimization.sqltest
expression: SELECT * FROM t_nocase WHERE name LIKE 'abc%';
info:
  statement_type: SELECT
  tables:
  - t_nocase
  setup_blocks:
  - like_prefix_nocase_schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH t_nocase USING INDEX idx_name_nocase (name>=? AND name<?)

BYTECODE
addr  opcode       p1  p2  p3  p4           p5  comment
   0  Init          0  11   0                0  Start at 11
   1  OpenRead      0   3   0  k(2,NoCase)   0  index=idx_name_nocase, root=3, iDb=0
   2  String8       0   3   0  ABC           0  r[3]='ABC'
   3  SeekGE        0  10   3                0  key=[3..3]
   4  String8       0   3   0  abd           0  r[3]='abd'
   5    IdxGE       0  10   3                0  key=[3..3]
   6    IdxRowId    0   1   0                0  r[1]=cursor 0 for index idx_name_nocase.rowid
   7    Column      0   0   2                0  r[2]=idx_name_nocase.name
   8    ResultRow   1   2   0                0  output=r[1..2]
   9  Next          0   5   0                0
  10  Halt          0   0   0                0
  11  Transaction   0   1   2                0  iDb=0 tx_mode=Read
  12  Goto          0   1   0                0
