testing/runner/tests/snapshots/like_prefix_optimization__like-prefix-single-char-uses-index.snap
---
source: like_prefix_optimization.sqltest
expression: SELECT * FROM t WHERE name LIKE 'a%';
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - like_prefix_schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH t USING INDEX idx_name (name>=? AND name<?)
