testing/runner/tests/snapshots/like_prefix_optimization__like-prefix-uses-index.snap
---
source: like_prefix_optimization.sqltest
expression: SELECT * FROM t WHERE name LIKE 'abc%';
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - like_prefix_schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH t USING INDEX idx_name (name>=? AND name<?)
